--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
- "name": "Measurement Tracker",
+{
+  "name": "Measurement Tracker",
   "short_name": "Tracker",
   "start_url": "./",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#000000",
   "theme_color": "#0d6efd",
   "icons": [
     {
